--- a/manifests/kots-config.yaml
+++ b/manifests/kots-config.yaml
@@ -59,6 +59,10 @@ spec:
         - name: embedded_redis_password
           hidden: true
           type: password
+          value: "{{repl RandomString 10}}"      
+        - name: embedded_redis_password
+          hidden: true
+          type: password
           value: "{{repl RandomString 32}}"
         - name: external_redis_host
           title: Redis Host
@@ -116,12 +120,12 @@ spec:
           hidden: true
           type: password
           value: "{{repl RandomString 32}}" 
-    - name: redis_settings
-      title: REDIS Settings
-      description: Configure redis Settings
+    - name: rabbitmq_settings
+      title: RabbitMQ Settings
       items:
-        - name: embedded_redis_password
-          hidden: true
-          type: password
-          value: "{{repl RandomString 10}}"   
+        - name: deploy-rabbit
+          title: Deploy RabbitMQ?
+          type: bool
+          default: "1"
+   
 
