--- a/manifests/postgres.yaml
+++ b/manifests/postgres.yaml
@@ -3,6 +3,7 @@ kind: HelmChart
 metadata:
   name: postgresql
 spec:
+  exclude: 'repl{{ ConfigOptionEquals `postgres_type` `external_postgres` }}'
   # chart identifies a matching chart from a .tgz
   chart:
     name: postgresql
