--- a/manifests/redis.yaml
+++ b/manifests/redis.yaml
@@ -3,6 +3,7 @@ kind: HelmChart
 metadata:
   name: redis
 spec:
+  exclude: 'repl{{ ConfigOptionEquals `redis_type` `external_redis` }}'
   # chart identifies a matching chart from a .tgz
   chart:
     name: redis
